--- a/views/about.html
+++ b/views/about.html
@@ -13,9 +13,9 @@
 
 <body>
     <section>
-        <h1>Some interesting facts about Van Gogh</h1>
+        <h1>Interesting facts about Van Gogh</h1>
         <article>
-            <p>Only 37 years old when he died and having only sold one painting, van Gogh sadly did not live long enough to see the extent of his legacy – which includes his works now being some of the most expensive in the world.</p> 
+            <h4>Only 37 years old when he died and having only sold one painting, van Gogh sadly did not live long enough to see the extent of his legacy – which includes his works now being some of the most expensive in the world.</h4> 
             <br/>
             <h3>Van Gogh Carrer</h3>
             <p>Until van Gogh was 27, he had explored several different jobs – he’d been a lay minister, teacher and art dealer.
