--- a/public/styles/styles2.css
+++ b/public/styles/styles2.css
@@ -1,10 +1,32 @@
 body {
-    margin: 0 20px;
+    margin: 0 30px;
     background: rgb(202,172,228);
     background: radial-gradient(circle, rgba(202,172,228,0.35898109243697474) 0%, rgba(148,187,233,0.42620798319327735) 100%);
     font-family: 'Sorts Mill Goudy', serif;
 }
 
 h1 {
-    
+    font-size: 2.8vw;
+    text-align: center;
+}
+
+h4 {
+    font-size: 1.4vw;
+    font-weight: 100;
+    text-align: right;
+    font-style: italic;
+}
+
+h3{
+    font-size: 1.8vw;
+    font-weight: 900;
+}
+
+p {
+    font-size: 1.4vw;
+    text-align: justify;
+}
+
+.images {
+    width: 50%;
 }
