--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>Vincent Van Gogh Site</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel='stylesheet' type='text/css' media='screen' href='../public/styles/styles1.css'>
+        <link rel='stylesheet' type='text/css' media='screen' href='/styles/styles.css'>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy&display=swap');
             </style>
@@ -17,7 +17,7 @@
         <h1>
             Vincent Van Gogh
         </h1>
-        <h3>The artist who painted almost 900 paintings in 10 years...</h3>
+        <h3 id="quote">The artist who painted almost 900 paintings in 10 years...</h3>
 
             <p>
             Welcome to our page! Here you will find some interesting facts about Vincent Van Gogh and his art work. <br/>
@@ -27,23 +27,23 @@
     </div>
 
 <div id="image-container">
-    <img id="vincent-image" src="../public/images/Self-portrait-of-Vincent-van-Gogh-2.jpeg" alt="Van Gogh portrait">
+    <img id="vincent-image" src="/images/Self-portrait-of-Vincent-van-Gogh-2.jpeg" alt="Van Gogh portrait">
 </div>
 
 </section>
 
 <section id="second-section">
     <div>
-        <a href="about.html" class="link">
+        <a href="/about" class="link">
             <h2>About Vincent Van Gogh</h2>
-            <img src="../public/images/van-gogh-life.jpeg">
+            <img src="/images/van-gogh-life.jpeg">
             <h4>Interesting facts about the artist life</h4>
         </a>
     </div>
     <div>
-        <a href="work-gallery.html" class="link">
+        <a href="/gallery" class="link">
             <h2>Van Gogh work</h2>
-            <img src="../public/images/image-017.jpeg">
+            <img src="/images/image-008.jpeg">
             <h4>Art Gallery</h4>
         </a>
     </div>
