--- a/views/work-gallery.html
+++ b/views/work-gallery.html
@@ -5,7 +5,7 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>Work-Gallery</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel='stylesheet' type='text/css' media='screen' href='../public/styles/styles3.css'>
+        <link rel='stylesheet' type='text/css' media='screen' href='/styles/styles.css'>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy&display=swap');
             </style>
@@ -22,30 +22,30 @@
 
 <div id="gallery">
   
-   <img src="../public/images/image-001.jpeg">
-   <img src="../public/images/image-002.jpeg">
-   <img src="../public/images/image-003.jpeg">
-   <img src="../public/images/image-004.jpeg">
-   <img src="../public/images/image-005.jpeg">
-   <img src="../public/images/image-006.jpeg">
-   <img src="../public/images/image-007.jpeg">
-   <img src="../public/images/image-008.jpeg">
-   <img src="../public/images/image-009.jpeg">
-   <img src="../public/images/image-010.jpeg">
-   <img src="../public/images/image-011.jpeg">
-   <img src="../public/images/image-012.jpg">
-   <img src="../public/images/image-013.jpeg">
-   <img src="../public/images/image-014.jpeg">
-   <img src="../public/images/image-015.jpeg">
-   <img src="../public/images/image-016.jpeg">
-   <img src="../public/images/image-017.jpeg">
-   <img src="../public/images/image-018.jpeg">
-   <img src="../public/images/image-019.jpeg">
-   <img src="../public/images/image-020.jpeg">
-   <img src="../public/images/image-021.jpeg">
-   <img src="../public/images/image-022.jpeg">
-   <img src="../public/images/image-023.jpeg">
-   <img src="../public/images/image-024.jpeg">
+   <img src="/images/image-001.jpeg">
+   <img src="/images/image-002.jpeg">
+   <img src="/images/image-003.jpeg">
+   <img src="/images/image-004.jpeg">
+   <img src="/images/image-005.jpeg">
+   <img src="/images/image-006.jpeg">
+   <img src="/images/image-007.jpeg">
+   <img src="/images/image-008.jpeg">
+   <img src="/images/image-009.jpeg">
+   <img src="/images/image-010.jpeg">
+   <img src="/images/image-011.jpeg">
+   <img src="/images/image-012.jpg">
+   <img src="/images/image-013.jpeg">
+   <img src="/images/image-014.jpeg">
+   <img src="/images/image-015.jpeg">
+   <img src="/images/image-016.jpeg">
+   <img src="/images/image-017.jpeg">
+   <img src="/images/image-018.jpeg">
+   <img src="/images/image-019.jpeg">
+   <img src="/images/image-020.jpeg">
+   <img src="/images/image-021.jpeg">
+   <img src="/images/image-022.jpeg">
+   <img src="/images/image-023.jpeg">
+   <img src="/images/image-024.jpeg">
   
   </div>
  
